--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -5,7 +5,8 @@ $color-scheme-one: (
         sun-yellow: #fedb3a,
         peach: #fce3af,
         dirty-blue: #4e6686,
-        close-black: #070813
+        close-black: #070813,
+        snow-white: #ffffff
 );
 
 $color-scheme-two: (
